[metadata]
name = asgi-types
version = 0.1.0
description = An awesome package is coming soon! 🎉
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Kludex/asgi-types
author = Marcelo Trylesinski
author_email = marcelotryle@email.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
project_urls =
    Twitter = https://twitter.com/marcelotryle

[options]
packages = find:
include_package_data = True
install_requires =
python_requires = >=3.8

[options.extras_require]
test =
    coverage[toml] >= 6.2
    pytest >= 6.2.5
